Second part with more content added - Series and Movie details

--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -7,7 +7,7 @@
     font-family: system-ui, "Bebas Neue", Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
- background: -webkit-linear-gradient(315deg,#42d392 25%,#647eff);
+    background: black;
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
