--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -3,8 +3,8 @@ $dark-text: #f9f9f9;
 $dark-border: #e2e8f057;
 $dark-primary: #f9f9f9;
 $dark-secondary: #f9f9f9;
-$accent: #ffe100;
-$dark-accent: #ffa600;
+$accent: #42d392;
+$dark-accent: #0b935f;
 $dark-accent-hover: tomato;
 $spacing-medium: 1.5rem;
 $spacing-small: 1rem;
