--- a/src/assets/styles/List.scss
+++ b/src/assets/styles/List.scss
@@ -1,13 +1,9 @@
-@import "../variables.scss";
+@import "@/assets/styles/_variables.scss";
 .list {
   &-title {
-    text-align: center;
-    color: $dark-primary;
-    font-size: 3rem;
-    margin: 7.5rem 0;
-    font-weight: lighter;
-    color: #f9f9f9;
-    text-decoration: underline;
+    font-size: 32px;
+    color:white;
+    padding: 2rem;
 
     @media (max-width: 768px) {
       font-size: 2rem;
@@ -21,4 +17,90 @@
     gap: 1.5rem;
     padding: 0 1rem;
   }
-}
+
+  &-card {
+      width: 250px;
+      height: 400px;
+      border-radius: 15px;
+      padding: 1.5rem;
+      background: white;
+      position: relative;
+      display: flex;
+      align-items: flex-end;
+      transition: 0.4s ease-out;
+      box-shadow: 0px 7px 10px rgba(black, 0.5);
+      &:hover {
+        transform: translateY(20px);
+        &:before{
+          opacity: 1;
+        }
+        .info {
+          opacity: 1;
+          transform: translateY(0px);
+        }
+      }
+      &:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        border-radius: 15px;
+        background: rgba(black, 0.6);
+        z-index: 2;
+        transition: 0.5s;
+        opacity: 0;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 15px;
+      }
+      .info {
+        position: relative;
+        z-index: 3;
+        color: white;
+        opacity: 0;
+        transform: translateY(30px);
+        transition: 0.5s;
+        .info-vote {
+          display: inline;
+          border: 2px solid white;
+          border-radius: 5px;
+          padding: 5px;
+          font-size: 18px;
+        }
+        h2 {
+          margin-top: 15px;
+          line-height: 30px;
+        }
+        .info-genre {
+          font-size: 12px;
+          text-transform: uppercase;
+          font-weight: 600;
+          border-radius: 5px;
+        }
+        p {
+          display: -webkit-box;
+          -webkit-line-clamp: 3;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          font-size: 14px;
+          margin-top: 8px;
+          margin-bottom: 1.5rem;
+          line-height: 18px;
+        }
+        .movie-link {
+          color:white;
+          text-decoration: none;
+        }
+      }
+    }
+  }
