latest changes after the deadline

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,5 +1,6 @@
 $dark-bg: green;
 $dark-text: #f9f9f9;
+$light-text: white;
 $dark-border: #e2e8f057;
 $dark-primary: #f9f9f9;
 $dark-secondary: #f9f9f9;
