--- a/src/assets/styles/List.scss
+++ b/src/assets/styles/List.scss
@@ -1,29 +1,34 @@
-@import "@/assets/styles/_variables.scss";
+@use "@/assets/styles/variables" as *;
+
 .list {
   &-title {
     font-size: 32px;
-    color:white;
+    color:$light-text;
     padding: 2rem;
 
-    @media (max-width: 768px) {
+    @media (max-width: 1024px) {
       font-size: 2rem;
-      margin: 5rem 0;
+      padding: 2rem 3rem;
     }
   }
 
   &-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
-    gap: 1.5rem;
+    gap: 1rem;
     padding: 0 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    padding: 0 1rem;
+    @media (max-width: 1024px) {
+      justify-items: center;
+    }
   }
 
   &-card {
-      width: 250px;
-      height: 400px;
+      width: 320px;
+      height: 160px;
       border-radius: 15px;
       padding: 1.5rem;
-      background: white;
+      background: $light-text;
       position: relative;
       display: flex;
       align-items: flex-end;
@@ -33,10 +38,14 @@
         transform: translateY(20px);
         &:before{
           opacity: 1;
+          background: #141426f5;
         }
         .info {
           opacity: 1;
           transform: translateY(0px);
+        }
+        .movie-title {
+          display: none;
         }
       }
       &:before {
@@ -53,6 +62,13 @@
         transition: 0.5s;
         opacity: 0;
       }
+      .movie-title {
+        margin-top: 15px;
+        line-height: 30px;
+        color:$light-text;
+        position: absolute;
+        z-index: 999;
+      }
       img {
         width: 100%;
         height: 100%;
@@ -65,27 +81,35 @@
       .info {
         position: relative;
         z-index: 3;
-        color: white;
+        color: $light-text;
         opacity: 0;
         transform: translateY(30px);
         transition: 0.5s;
         .info-vote {
           display: inline;
-          border: 2px solid white;
+          border: 2px solid $light-text;
           border-radius: 5px;
           padding: 5px;
           font-size: 18px;
         }
-        h2 {
-          margin-top: 15px;
-          line-height: 30px;
+        .featured__genres {
+          display: flex;
+          margin-top: 1rem;
+          .info-genre {
+            font-size: 12px;
+            text-transform: uppercase;
+            font-weight: 600;
+            border: 1px solid $light-text;
+            padding: 5px;
+            &:nth-child(1) {
+              margin-right:.5rem;
+            }
+            &:nth-child(2) {
+              margin-right:.5rem;
+            }
+          }
         }
-        .info-genre {
-          font-size: 12px;
-          text-transform: uppercase;
-          font-weight: 600;
-          border-radius: 5px;
-        }
+  
         p {
           display: -webkit-box;
           -webkit-line-clamp: 3;
@@ -97,8 +121,8 @@
           margin-bottom: 1.5rem;
           line-height: 18px;
         }
-        .movie-link {
-          color:white;
+        .movie-link, .serie-link {
+          color:$light-text;
           text-decoration: none;
         }
       }
