--- a/src/components/home/Home_styles.scss
+++ b/src/components/home/Home_styles.scss
@@ -1,10 +1,11 @@
-@import "@/assets/styles/_variables.scss";
+@use "@/assets/styles/variables" as *;
 
 .home {
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
+
 .hero {
   .hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://cdn.celluloidjunkie.com/wp-content/uploads/2021/04/30144535/Paper-vs-Digital-Movie-Posters-Featured.jpg");
@@ -19,7 +20,7 @@
     position   : absolute;
     width      : 100%;
     height     : 100%;
-    opacity    : 0.8; 
+    opacity    : 0.6; 
   }
     .hero-text {
       position: relative;
@@ -32,132 +33,81 @@
       h1{
         margin: 0;
         display: inline;
-        color: #ffffff;
+        color: $light-text;
         font-size: 4rem;
         opacity: 0.8;
         line-height: 120px;
+        @media (max-width: 1024px) {
+          font-size: 2.6rem;
+          line-height: 60px;
+          text-align: center;
+        }
+        @media (max-width: 768px) {
+          font-size: 2rem;
+          line-height: 40px;
+          text-align: center;
+        }
       }
       p{
         font-size: 2rem;
-        color: #ffffff;
+        color: $light-text;
         opacity: 0.8;
         font-weight: bold;
         margin-bottom: 20px;
-      }
-      button {
-        padding: 18px 32px;
-        font-size: 22px;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        margin: 8px 15px;
-        transition: 0.2s ease;
-        background: #42d392;
-        color: rgb(8 8 8 / 76%);
-        font-weight: 600;
-        position: relative;
-        overflow: hidden;
-        box-shadow: rgba(110, 110, 119, 0.452) 0px 8px 30px 0px;
-        border-radius: 10px;
-        &:before {
-          width: 200%;
-          height: 200%;
-          content: '';
-          transform: rotate(-45deg);
-          position: absolute;
-          top: -10%;
-          left: -180%;
-          background: rgba(119, 129, 238, 0.2);
-          transition: 0.3s ease-in-out;
+        @media (max-width: 1024px) {
+          font-size: 1.6rem;
+          text-align: center;
         }
-        &:hover {
-          &:before {
-            left:55%;
-          }
+        @media (max-width: 768px) {
+          font-size: 1.3rem;
+          text-align: center;
+        }
+      }
+      .btn-subscription {
+        padding: 22px 85px;
+        font-size: 25px;
+        @media (max-width: 1024px) {
+          padding: 15px 50px;
+          font-size: 20px;
+        }
+        @media (max-width: 768px) {
+          padding: 15px 45px;
+          font-size: 16px;
         }
       }
     }
   }
 }
-
-// .hero {
-//   width: 100%;
-//   min-height: 40vh;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   text-align: center;
-//   color: $dark-text;
-//   padding: $spacing-medium;
-
-//   @media (max-width: 768px) {
-//     width: auto;
-//   }
-
-//   &__content {
-//     max-width: 600px;
-//   }
-
-//   &__title {
-//     font-size: 2.5rem;
-//     margin-bottom: $spacing-small;
-//   }
-
-//   &__subtitle {
-//     font-size: 1.2rem;
-//     margin-bottom: $spacing-medium;
-//   }
-
-//   &__button {
-//     background: $accent;
-//     color: $dark-bg;
-//     border: none;
-//     padding: 0.75rem 1.5rem;
-//     font-size: 1rem;
-//     font-weight: bold;
-//     cursor: pointer;
-//     border-radius: 5px;
-//     transition: background 0.3s ease;
-
-//     &:hover {
-//       background: $dark-accent, 10%;
-//     }
-//   }
-//  }
-
-// .hero-image {
-//     width: 100%;
-//     height: 100%;
-//     object-fit: cover;
-//   }
   
 .overlay {
     position: absolute;
     bottom: 10%;
     left: 5%;
-    color: white;
+    color: $light-text;
     z-index: 10;
-  }
-  .movie-main {
+}
+
+.movie-main {
     padding: 2rem;
     h1 {
       font-size: 26px;
-      color:white;
+      color:$light-text;
       padding: 2rem;
     }
     .wrapper-movies {
-      display: flex;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 20px;
       padding: 20px;
       box-sizing: border-box;
+      justify-items: center;
+
       .movie-card {
         width: 250px;
         height: 400px;
         border-radius: 15px;
         padding: 1.5rem;
-        background: white;
+        background: $light-text;
         position: relative;
         display: flex;
         align-items: flex-end;
@@ -199,13 +149,13 @@
         .info {
           position: relative;
           z-index: 3;
-          color: white;
+          color: $light-text;
           opacity: 0;
           transform: translateY(30px);
           transition: 0.5s;
           .info-vote {
             display: inline;
-            border: 2px solid white;
+            border: 2px solid $light-text;
             border-radius: 5px;
             padding: 5px;
             font-size: 18px;
@@ -232,19 +182,19 @@
             line-height: 18px;
           }
           .movie-link {
-            color:white;
+            color:$light-text;
             text-decoration: none;
           }
         }
       }
     }
-  }
+}
 
 .series-main {
   padding: 2rem;
   h1 {
     font-size: 26px;
-    color:white;
+    color:$light-text;
     padding: 2rem;
   }
   .wrapper-series {
@@ -259,7 +209,7 @@
       height: 400px;
       border-radius: 15px;
       padding: 1.5rem;
-      background: white;
+      background: $light-text;
       position: relative;
       display: flex;
       align-items: flex-end;
@@ -301,13 +251,13 @@
       .info {
         position: relative;
         z-index: 3;
-        color: white;
+        color: $light-text;
         opacity: 0;
         transform: translateY(30px);
         transition: 0.5s;
         .info-vote {
           display: inline;
-          border: 2px solid white;
+          border: 2px solid $light-text;
           border-radius: 5px;
           padding: 5px;
           font-size: 18px;
@@ -334,69 +284,10 @@
           line-height: 18px;
         }
         .serie-link {
-          color:white;
+          color:$light-text;
           text-decoration: none;
         }
       }
-    }
-  }
-}
-.plans {
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-  align-items: center;
-
-  @media (max-width: 768px) {
-    flex-direction: column;
-  }
-
-  &__item {
-    width: 300px;
-    height: 300px;
-    background: #f9f9f9;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-
-  &__title {
-    font-size: 2rem;
-    font-weight: normal;
-    margin-bottom: 10px;
-    text-align: center;
-  }
-
-  &__price {
-    font-size: 1rem;
-    font-weight: normal;
-    margin-bottom: 2rem;
-    text-align: center;
-    color: $dark-accent;
-  }
-
-  &__list {
-    list-style: none;
-    padding: 0;
-    text-align: center;
-
-    &-item {
-      margin-bottom: 5px;
-    }
-  }
-
-  &__button {
-    width: 100%;
-    margin-top: 2.5rem;
-    padding: 8px 16px;
-    background: $dark-accent;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: 0.3s;
-
-    &:hover {
-      background: $dark-accent-hover;
     }
   }
 }
