Minor changes to clean the code - ready to deploy

--- a/src/assets/styles/movie_details.scss
+++ b/src/assets/styles/movie_details.scss
@@ -19,6 +19,9 @@ p {
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
                 &:before {
                 content    : "";
                 background : #000000; 
